--- a/main/gcc/PKGBUILD
+++ b/main/gcc/PKGBUILD
@@ -6,9 +6,9 @@ pkgrel=1
 pkgdesc="GNU C/C++ Compiler"
 arch=('aarch64')
 url="https://gcc.gnu.org"
-license=('GPL')
+license=('GPL' 'GPLv2')
 groups=('base-devel')
-depends=('binutils')
+depends=('binutils' 'libmpfr' 'libmpc' 'libgmp' 'zlib' 'zstd')
 makedepends=('libgmp' 'libmpfr' 'binutils' 'libmpc' 'clang' 'gettext' 'flex')
 changelog="ChangeLog-2021"
 source=("https://mirrors.ustc.edu.cn/gnu/gcc/gcc-$pkgver/gcc-$pkgver.tar.xz"
@@ -18,36 +18,39 @@ source=("https://mirrors.ustc.edu.cn/gnu/gcc/gcc-$pkgver/gcc-$pkgver.tar.xz"
 md5sums=('ed45b55ee859ada4b25a1e76e0c4d966'
 	 '50dc08e7d1b0b48b01242832e3bcf9f4'
 	 '59968006fd73b91cbc8a0a8192b654ba'
-	 'ed83dddb25d31f3702635e13e0ff2ff1')
+	 '8e5672f240d6a4386642553960029f5b')
 termux_prefix=/data/data/com.termux/files/usr
 mt_prefix=/data/data/bin.mt.plus/files/term/usr
 
+
+
+
 prepare() {
-	mkdir -pv $srcdir/gcc
+	mkdir -pv ${srcdir}/gcc
 	cd gcc-$pkgver/
 	echo "请问你要为哪个终端安装gcc？"
-	echo -e "1.Termux\n2.MT管理器终端\n\n\n目前仅支持在Termux构建\n"
+        echo -e "1.Termux\n2.MT管理器终端\n\n\n目前仅支持在Termux构建\n"
 #在Termux为MT管理器构建教程:
 #1.安装proot，指令:apt install proot
-#2.修改termux-chroot，指令:nano $PREFIX/bin/termux-chroot，找到"-b /data:/data"，修改为"-b $PREFIX;$PREFIX"，然后Ctrl+X退出，按y保存
-#3.输入termux-chroot，回车，进入一个虚拟环境，然后输入:mkdir -p /data/data/bin.mt.plus/files/term/usr来创建MT管理器的$PREFIX目录
+#2.修改termux-chroot，指令:nano $PREFIX/bin/termux-chroot，找到"-b /data:/data"，修改为"-b $PREFIX/..;$PREFIX/.."，然后Ctrl+X退出，按y保存
+#3.输入termux-chroot，回车，进入一个虚拟环境，然后输入:mkdir -p /data/data/bin.mt.plus/files/term/usr来创>建MT管理器的$PREFIX目录
 #4.然后输入termux-chroot进入虚拟环境，进入构建目录（PKGBUILD所在的目录），输入makepkg -d 即可
         read -p "请输入[1/2]:" install
-        case $install in
+        case ${install} in
         1)
-        install_prefix=$termux_prefix
-	patch -p1 < ../../fix-termux.patch
+	echo "export install_prefix=${termux_prefix}">${srcdir}/prefix
+        patch -p1 < ../../fix-termux.patch
         ;;
         2)
-        install_prefix=$mt_prefix
-	patch -p1 < ../../fix-mt.patch
-	;;
-	*)
-	echo "未输入或错误的输入，退出"
-	exit 1
-	;;
-	esac
-	cd ../gcc
+	echo "export install_prefix=${mt_prefix}">${srcdir}/prefix
+        patch -p1 < ../../fix-mt.patch
+        ;;
+        *)
+        echo "未输入或错误的输入，退出"
+        exit 1
+        ;;
+        esac
+	source ${srcdir}/prefix
 ../gcc-$pkgver/configure \
 	--prefix=${install_prefix} \
 	--enable-languages=c,c++ \
@@ -56,17 +59,17 @@ prepare() {
 	--build=aarch64-linux-android \
 	--enable-default-pie \
 	--enable-shared \
-	--disable-bootstrap \
-	--disable-libsanitizer \
-	--with-arch=armv8-a \
-	--with-system-zlib
+	--disable-bootstrap \    #避免阶段性编译占用大量时间
+	--disable-libsanitizer \ #无法构建，因此禁止
+	--with-arch=armv8-a \	 
+	--with-system-zlib	 #使用系统自带的zlib库
 	cd $install_prefix
 	rm -rf aarch64-linux-android
-	ln -s $srcdir/aarch64-linux-android
+	ln -s ${srcdir}/aarch64-linux-android
 }
 
 build() {
-	cd $srcdir/gcc
+	cd ${srcdir}/gcc
 	echo 即将开始构建，请保持termux在前台运行！
 	a=4
 	for i in {1..3}
@@ -80,8 +83,11 @@ build() {
 }
 
 package() {
-	cd $srcdir/gcc
+	source ${srcdir}/prefix
+	cd ${srcdir}/gcc
 	make DESTDIR="$pkgdir/" install
-	echo $install_prefix
-	cp -r $srcdir/aarch64-linux-android/* $pkgdir/$install_prefix
+	cp -r ${srcdir}/aarch64-linux-android/* $pkgdir/${install_prefix}
+	cd $pkgdir/${install_prefix}/bin
+	ln -s gcc cc
+	rm -rf ${install_prefix}/aarch64-linux-android
 }
